--- a/package.json
+++ b/package.json
@@ -21,9 +21,12 @@
     "express": "^4.17.1",
     "express-flash": "0.0.2",
     "express-session": "^1.17.1",
+    "generate-password": "^1.6.0",
     "jsonwebtoken": "^8.5.1",
+    "md5": "^2.3.0",
     "mongodb": "^3.5.6",
     "mysql": "^2.18.1",
+    "nodemailer": "^6.4.17",
     "nodemailer-express-handlebars": "^4.0.0",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0"
