--- a/package.json
+++ b/package.json
@@ -15,21 +15,28 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^4.0.1",
+    "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
+    "ejs": "^3.1.6",
     "express": "^4.17.1",
     "express-flash": "0.0.2",
     "express-session": "^1.17.1",
     "generate-password": "^1.6.0",
+    "heroku": "^7.49.1",
     "jsonwebtoken": "^8.5.1",
     "md5": "^2.3.0",
     "mongodb": "^3.5.6",
     "mysql": "^2.18.1",
+    "nexmo": "^2.9.1",
     "nodemailer": "^6.4.17",
     "nodemailer-express-handlebars": "^4.0.0",
     "passport": "^0.4.1",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "socket.io": "^3.1.1",
+    "textmagic-rest-client": "^1.0.11",
+    "twilio": "^3.56.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.3"
